--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -702,8 +702,8 @@
 /* 펀딩 메인 */
 .orderandpay .main_wrapper .funding_main_logo_wrap{padding-top:50px; padding-bottom:65px;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_title{margin-bottom:40px; font-size:1.666em; font-weight:bold; text-align:center;}
-.orderandpay .main_wrapper .funding_main_logo_wrap .funding_title strong{display:block; font-size:1.9em; color:#D41417; font-family:'GmarketSansBold'; }
-.orderandpay .main_wrapper .funding_main_logo_wrap .funding_title strong:after{content:""; display:inline-block; width:33px; height:38px; margin-left:5px; margin-top:-2px; background:url('../../images/new/main_hot_ico.png') no-repeat center center; background-size:33px 38px; vertical-align:middle;}
+.orderandpay .main_wrapper .funding_main_logo_wrap .funding_title strong{display:block; font-size:1.9em; color:#D41417; font-family:'GmarketSansBold'; margin-top:2px;}
+.orderandpay .main_wrapper .funding_main_logo_wrap .funding_title strong:after{content:""; display:inline-block; width:33px; height:38px; margin-left:5px; margin-top:-6px; background:url('../../images/new/main_hot_ico.png') no-repeat center center; background-size:33px 38px; vertical-align:middle;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_process_list{margin-bottom:30px; text-align:center; font-size:0;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_process_list .items{position:relative; display:inline-block; width:60px; height:60px; margin-right:25px; border:3px solid #EDEDED; border-radius:60px; text-align:center; box-sizing:border-box;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_process_list .items:after{content:""; position:absolute; top:50%; right:-21px; width:11px; height:17px; margin-top:-7px; background:url('../../images/new/funding_process_arrow.png') no-repeat; background-size:11px 17px;}
@@ -751,7 +751,7 @@
 .orderandpay .stuff_detail_wrap .stuff_cont{padding:0 20px;}
 .orderandpay .stuff_detail_wrap .stuff_cont .fund_alert{font-size:1.166em;}
 .orderandpay .hott_ing_wrap .stuff_detail_wrap .stuff_cont .fund_alert{margin-bottom:25px;}
-.orderandpay .stuff_detail_wrap .stuff_cont .fund_alert:before{content:""; display:inline-block; width:19px; height:18px; margin-right:8px; background:url('../../images/new/fund_alert_ico.png') center no-repeat; background-size:19px 18px; vertical-align:middle;}
+.orderandpay .stuff_detail_wrap .stuff_cont .fund_alert:before{content:""; display:inline-block; width:19px; height:18px; margin-top: -5px; margin-right:2px; background:url('../../images/new/fund_alert_ico.png') center no-repeat; background-size:19px 18px; vertical-align:middle;}
 .orderandpay .stuff_detail_wrap .stuff_cont .fund_alert .unit_number{font-weight:bold; color:#D41417;}
 .orderandpay .stuff_detail_wrap .stuff_cont .stuff_tit_box{margin-bottom:37px;}
 .orderandpay .hott_ing_wrap .stuff_detail_wrap .stuff_cont .stuff_tit_box{margin-bottom:60px;}
@@ -790,6 +790,7 @@
 .orderandpay .stuff_item .img .end_dim{position:absolute; width:100%; height:100%; top:0; left:0; color:#fff; text-align:center; background:rgba(0,0,0,0.6);}
 .orderandpay .stuff_item .img .end_dim:after{content:""; display:inline-block; height:100%; vertical-align:middle;}
 .orderandpay .stuff_item .tit{height:18px; padding:0 10px; white-space:nowrap; text-overflow:ellipsis; overflow:hidden; line-height:18px; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
+.orderandpay .stuff_item .tit.line2 { white-space:normal; height:36px;}
 .orderandpay .stuff_item .txt{height:18px; padding:0 10px; margin-bottom:10px; white-space:nowrap; text-overflow:ellipsis; overflow:hidden; line-height:18px; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
 .orderandpay .stuff_item .price{padding:0 10px; margin-bottom:15px;}
 .orderandpay .stuff_item .price .font_t{font-size:0.928em; font-weight:bold; vertical-align:bottom;}
@@ -799,6 +800,70 @@
 
 .orderandpay .hott_encore_wrap{padding-top:80px;}
 .orderandpay .hott_encore_wrap .stuff_item{width:140px; margin-right:10px;}
+
+.orderandpay .detail_image img {width:100%;}
+.orderandpay.resest {padding:0 !important;}
+
+.orderandpay .funding_title_wrap:after {content: ''; display: block; clear: both;}
+.orderandpay .funding_title_wrap .title_text {float:left; font-size: 19px;font-weight: 700;color:#000;line-height: 1.2;float: left;font-family: 'GmarketSansBold';letter-spacing: 0.5px;}
+.orderandpay .funding_title_wrap .title_text .icon_text {color:#D41417;position: relative;padding-right: 21px;}
+.orderandpay .funding_title_wrap .title_text .icon_text:before {content: '';display: block;width:20px;height:20px;background: url(../../images/new/icon_funding_detail_logo.png) no-repeat 0 0;background-size: 20px 20px;position: absolute;top: -1px;right: 0;}
+.orderandpay .funding_title_wrap .title_text .text {margin-left: -6px;}
+.orderandpay .funding_title_wrap .fund_alert {float: right; margin-top:-5px;}
+
+.orderandpay .detail_info .stuff_detail_wrap .stuff_cont .stuff_tit_box .tit {white-space: normal; line-height: 31px;  height: 62px;}
+
+.orderandpay .funding_goal_text_wrap {}
+.orderandpay .funding_goal_text_wrap .funding_goal_text {background: #FAFAFA; padding:19px 22px 16px 75px; min-height:40px; line-height: 1.4; font-size: 13px; font-weight: 400; position: relative;}
+.orderandpay .funding_goal_text_wrap .funding_icon1:before {content: ''; display: block; position: absolute; top:13px; left:15px; width:45px; height:48px; background: url(../../images/new/icon_funding_01.png) no-repeat 0 0; background-size: contain;}
+.orderandpay .funding_goal_text_wrap .funding_icon2:before {content: ''; display: block; position: absolute; top:17px; left:30px; width:37px; height:44px; background: url(../../images/new/icon_funding_02.png) no-repeat 0 0; background-size: contain;}
+.orderandpay .funding_goal_text_wrap .funding_icon3:before {content: ''; display: block; position: absolute; top:27px; left:18px; width:48px; height:34px; background: url(../../images/new/icon_funding_03.png) no-repeat 0 0; background-size: contain;}
+.orderandpay .funding_goal_text_wrap.borderline {padding-bottom: 20px; border-bottom:1px #DBDBDB solid;}
+
+/* 상품 혜택 */
+.orderandpay .clear:after{content:'';display:block;clear:both;height:0;font-size:0;visibility:hidden;}
+.orderandpay .stuff-benefit-wrap .title-wrap {font-size: 16px; font-weight:700;  padding-bottom: 14px;  border-bottom: 1px solid #B5B5B5;}
+.orderandpay .stuff-benefit-wrap .title-wrap strong{  font-size: 16px;  line-height: 24px;}
+
+.orderandpay .stuff-benefit-wrap .title-wrap .coupon-down{  float: right;  width: 90px; height: 30px;  background: url(../../images/biz/stuff-detail/down-coupon-btn.png) no-repeat center / auto;  text-align: right;  cursor: pointer;}
+.orderandpay .benefit-wrap{  padding-top: 16px;  border-bottom: 1px solid #B5B5B5;}
+.orderandpay .benefit-list{  padding-bottom: 16px;}
+.orderandpay .benefit-list .title-text{  float: left;  width: 90px;  font-size: 13px;  line-height: 20px; color:#000;}
+.orderandpay .benefit-list .title-text strong{  font-weight: 700;}
+.orderandpay .benefit-list .value-text{  float: left;  width: calc(100% - 90px);  font-size: 13px;  line-height: 20px;}
+.orderandpay .benefit-list .value-text em,
+.orderandpay .benefit-list .value-text i{  font-family: 'font_gs';  font-weight: bold;}
+.orderandpay .benefit-list.coupon .value-text{  color: #49A4FC;}
+.orderandpay .benefit-list .value-text p{  display: inline-block;  padding-bottom: 5px;  color:#000;}
+.orderandpay .benefit-list .value-text .tooltip-btn{  position: relative;  display: inline-block;  width: 18px;  height: 18px;  font-size: 11px;  line-height: 16px;  color: #999;  border-radius: 50%;  border: 1px solid #999;  text-align: center;  margin-left: 7px;  box-sizing: border-box;  cursor: pointer;}
+.orderandpay .benefit-list .value-text .tooltip-box{  position: absolute;  z-index: 1;  top: 0;  left: -4px;     max-width: 100%;    min-width: 70px;  width: auto;  visibility: hidden;  padding: 10px;  background: #fff;  color: #000;  border: 1px solid #DEDEDE;  border-radius: 5px;  box-sizing: border-box;}
+.orderandpay .benefit-list .value-text .tooltip-box p{  padding: 0;}
+.orderandpay .benefit-list .value-text .tooltip-btn:hover .tooltip-box{  visibility: visible;}
+.orderandpay .benefit-list .value-text p em,
+.orderandpay .benefit-list .value-text p b{  font-family: 'font_ns';  font-weight: 400;}
+.orderandpay .delivery-wrap{  padding-top: 20px;  border-bottom: 1px solid #B5B5B5;}
+.orderandpay .alert_iphone.funding {padding-top:16px;}
+.orderandpay .alert_iphone.funding:before {content:''; top:18px;}
+
+.orderandpay .elip{  display: block;  width: 100%;  text-overflow: ellipsis;  white-space: nowrap;  overflow: hidden;}
+.orderandpay .elip2{  display: block;  width: 100%;  overflow:hidden; text-overflow:ellipsis; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient: vertical;}
+
+.orderandpay .brand-banner{position: relative; border:1px #DBDBDB solid;}
+.orderandpay .brand-banner .img-wrap{  float: left;  position: relative;  width: 78px;  height: 78px;   margin-right: 15px;  box-sizing: border-box;  overflow: hidden;}
+.orderandpay .brand-banner .img-wrap img{  position: absolute;  left: 50%;  top: 50%;  transform: translate(-50%,-50%);  max-width: 100%;  min-height: 100%;}
+.orderandpay .brand-banner .text-wrap{ margin-top: 17px; float: left;  width: calc(100% - 110px);}
+.orderandpay .brand-banner .banner-title strong{  font-size: 14px;  line-height: 20px;  color: #000;  padding-bottom: 2px; max-width: 160px;}
+.orderandpay .brand-banner .banner-description p{  font-size: 14px;  line-height: 20px;  color: #777;}
+.orderandpay .brand-banner .go-brand{  position: absolute;  left: 93px;  bottom: 14px;  font-size: 11px; font-weight: 400; line-height: 20px;  padding-bottom: 1px;  border-bottom: 1px solid;}
+.orderandpay .brand-banner .go-brand:after{  content: '';  display: inline-block;  width: 5px;  height: 10px;  margin-left: 3px; margin-top:-2px;  vertical-align: middle;  background: url(../../images/new/icon_arrow.png) no-repeat center / 100% auto;}
+
+.orderandpay .brand_like_wrap {position: absolute; top:16px; right:14px;}
+.orderandpay .brand_like_wrap .icon_brand_like {width:14px; height:13px; display: inline-block; vertical-align: middle; background: url(../../images/new/icon_funding_brand_like.png) no-repeat 0 0; background-size: contain; margin-top:-3px;}
+.orderandpay .brand_like_wrap .brand_like_count {font-size: 14px; color:#777; font-weight: 500;}
+.orderandpay .banner_wide img {width:100%;}
+
+.orderandpay .detail_info .stuff_detail_wrap .swiper-container-horizontal>.swiper-scrollbar {height: 4px;    background: #fff;    width: 168px;    left: 50%;    margin-left: -84px;    bottom: 24px;}
+.orderandpay .detail_info .stuff_detail_wrap .swiper-scrollbar-drag {background: #000;}
 
 
 @media screen and (max-width: 360px) {
