--- a/PC/css/new/orderandpay.css
+++ b/PC/css/new/orderandpay.css
@@ -945,6 +945,7 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay.record_video {width:100% !important;}
 .orderandpay .cut_size {overflow: hidden; max-width: 950px; margin: 0 auto;}
 .orderandpay .marginCenter { width:950px; margin:0 auto;}
+.width100{width:100% !important;}
 
 
 /* 상단 슬라이드 메인 배너 */
@@ -1244,7 +1245,50 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .funding_policy_list .items {font-size: 13px; font-weight:500; line-height: 1.8;}
 
 /* 펀딩 메인 */
-.orderandpay .funding_main_wrap {}
+.orderandpay .funding_main_logo_wrap{width:950px; margin:0 auto; margin-bottom:50px;}
+
+.orderandpay .best_hott_wrap{padding:60px 0; background:#F8F8F8;}
+.orderandpay .best_hott_wrap .best_hott_tit{margin-bottom:50px; text-align:center; font-size:40px;}
+.orderandpay .best_hott_wrap .best_hott_banner{overflow:hidden; margin-bottom:25px;}
+.orderandpay .best_hott_wrap .best_hott_banner .item{width:937px; margin:0 20px; float:left; background:#fff;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a{display:block; padding:30px; border:1px solid #EDEDED; box-sizing:border-box; overflow:hidden;}
+.orderandpay .best_hott_wrap .best_hott_banner .item.slick-active a{border:5px solid #000; padding:26px;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .best_hott_img{float:left; width:310px;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .best_hott_img img{width:100%;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info{position:relative; float:right; width:537px; padding-top:40px; padding-right:60px; box-sizing:border-box;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .dday{margin-bottom:30px; font-size:20px; color:#FE6A5B; font-weight:bold;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .dday .only_english{font-size:22px;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .tit{margin-bottom:20px; font-size:26px; font-weight:bold;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .txt{margin-bottom:25px; height:80px; line-height:20px; font-size:14px;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .price{margin-bottom:15px; font-size:16px; color:#CCCCCC;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .price .only_english{font-size:18px; text-decoration:line-through;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .discount{font-size:16px; color:#DD1010;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .discount .only_english{font-size:28px; font-weight:bold;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .discount .percent{margin-right:15px; color:#000;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .progress{position:absolute; top:5px; right:0;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .progress span{display:block; width:70px; height:70px; line-height:68px; color:#FE6A5B; font-weight:bold; text-align:center; border:4px solid #FE6A5B; border-radius:70px; box-sizing:border-box;}
+.orderandpay .best_hott_wrap .best_hott_banner .item a .info .progress .complete{color:#49A4FC; border:4px solid #49A4FC;}
+.orderandpay .best_hott_wrap .main_banner_control{width:950px; margin:0 auto; text-align:right;}
+.orderandpay .best_hott_wrap .main_banner_control .main_banner_btn{display:inline-block;}
+.orderandpay .best_hott_wrap .main_banner_control .main_banner_btn button{width:9px; height:23px; margin:0 5px; font-size:0; vertical-align:middle;}
+.orderandpay .best_hott_wrap .main_banner_control .main_banner_btn .prev{background:url(../../images/new/best_hott_prev.png) no-repeat;}
+.orderandpay .best_hott_wrap .main_banner_control .main_banner_btn .next{background:url(../../images/new/best_hott_next.png) no-repeat;}
+.orderandpay .best_hott_wrap .main_banner_control .main_banner_btn .num{font-size:20px; letter-spacing:3px; color:#999999; font-weight:bold;}
+.orderandpay .best_hott_wrap .main_banner_control .main_banner_btn .num strong{color:#000;}
+
+.orderandpay .funding_main_wrap .tab_wrap.tab1{width:950px; margin:0 auto;}
+.orderandpay .funding_main_wrap .title_icon{font-size: 40px; font-weight: 700; text-align: center; line-height: normal;}
+.orderandpay .funding_main_wrap .title_icon:before{content: ''; margin: 0 auto; display: block; width:100px; height: 51px;}
+.orderandpay .funding_main_wrap .title_icon.ico01:before{background: url(../../images/new/icon_funding_main1.png) no-repeat center center;}
+.orderandpay .funding_main_wrap .title_icon.ico02:before{background: url(../../images/new/icon_funding_main2.png) no-repeat center center;}
+.orderandpay .funding_main_wrap .title_icon.ico03:before{background: url(../../images/new/icon_funding_main3.png) no-repeat center center;}
+.orderandpay .funding_main_wrap .title_texts_list .items_red{color:#FE6A5B;}
+
+.orderandpay .stuff-right{width:456px;}
+.orderandpay .stuff-main-wrap .funding_complete_wrap{float:none; text-align:left;}
+
+
+
 
 /* 펀딩 상단  */
 .orderandpay .funding_main_wrap .funding_main_logo_wrap { margin-top:114px; }
@@ -1281,8 +1325,11 @@ ul.agency_select li:nth-child(3) .ele {
 .orderandpay .funding_main_wrap .title_icon1:before {content: ''; margin: 0 auto; display: block; width:83px; height: 45px; background: url(../../images/new/icon_funding_main1.png) no-repeat 0 0;}
 .orderandpay .funding_main_wrap .title_texts_list {font-size: 16px; font-weight: 400; color:#777777;text-align: center;}
 .orderandpay .funding_main_wrap .title_texts_list .items {margin-bottom: 10px; min-width: auto; float: none; display: block;}
-.orderandpay .funding_main_wrap .sort_order .tab_list .items {min-width: auto; display: block;}
-.orderandpay .funding_main_wrap .sort_order .tab_list .items:before {content: ''; display: block; width:4px; height:4px; background: #E0E0E0; border-radius: 4px;}
+.orderandpay .funding_main_wrap .sort_order .tab_list .items {min-width: auto; display: block; position: relative;}
+.orderandpay .funding_main_wrap .sort_order .tab_list .items:before {content: ''; display: block; position: absolute; top:50%; margin-top: -2px; left:-2px; width:4px; height:4px; background: #E0E0E0; border-radius: 4px;}
+.orderandpay .funding_main_wrap .sort_order .tab_list .items:first-child {}
+.orderandpay .funding_main_wrap .sort_order .tab_list .items:first-child:before {content: ''; display: none;}
+
 .orderandpay .funding_main_wrap .sort_order .tab_list .items a {border:0;}
 .orderandpay .funding_main_wrap .sort_order .tab_list .items a span {padding:0 16px;}
 .orderandpay .funding_main_wrap .sort_order .tab_list .items .on {border:0;}
