--- a/MOBILE/css/new/orderandpay.css
+++ b/MOBILE/css/new/orderandpay.css
@@ -701,8 +701,8 @@
 @font-face { font-family: 'GmarketSansBold'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansBold.woff') format('woff'); font-weight: normal; font-style: normal; }
 /* 펀딩 메인 */
 .orderandpay .main_wrapper .funding_main_logo_wrap{padding-top:50px; padding-bottom:65px;}
-.orderandpay .main_wrapper .funding_main_logo_wrap .funding_title{margin-bottom:40px; font-size:1.666em; font-weight:bold; text-align:center;}
-.orderandpay .main_wrapper .funding_main_logo_wrap .funding_title strong{display:block; font-size:1.9em; color:#D41417; font-family:'GmarketSansBold'; margin-top:2px;}
+.orderandpay .main_wrapper .funding_main_logo_wrap .funding_title{margin-bottom:40px; font-size:20px; font-weight:bold; text-align:center;}
+.orderandpay .main_wrapper .funding_main_logo_wrap .funding_title strong{display:block; font-size:38px; color:#D41417; font-family:'GmarketSansBold'; margin-top:2px;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_title strong:after{content:""; display:inline-block; width:33px; height:38px; margin-left:5px; margin-top:-6px; background:url('../../images/new/main_hot_ico.png') no-repeat center center; background-size:33px 38px; vertical-align:middle;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_process_list{margin-bottom:30px; text-align:center; font-size:0;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_process_list .items{position:relative; display:inline-block; width:60px; height:60px; margin-right:25px; border:3px solid #EDEDED; border-radius:60px; text-align:center; box-sizing:border-box;}
@@ -711,14 +711,14 @@
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_process_list .items:last-child:after{display:none;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_process_list .items .unit_text{width:100%; padding-top:8px; font-size:14px;}
 .orderandpay .main_wrapper .funding_main_logo_wrap .funding_desc_text{text-align:center;}
-.orderandpay .main_wrapper .funding_main_logo_wrap .funding_desc_text .text{font-size:1.25em; color:#777777;}
+.orderandpay .main_wrapper .funding_main_logo_wrap .funding_desc_text .text{font-size:15px; color:#777777;}
 
 
 .orderandpay .main_wrapper .cont01 .swiper-container{padding-bottom:30px;}
 .orderandpay .main_wrapper .cont01 .swiper-slide.type01 .info{width:100%; height:100%; padding:0; background:none;}
-.orderandpay .main_wrapper .cont01 .swiper-slide.type01 .info .tit{position:absolute; top:6.12%; width:100%; margin-top:0; text-align:center; font-size:1.166em; font-weight:300;}
-.orderandpay .main_wrapper .cont01 .swiper-slide.type01 .info .tit strong{display:block; margin-bottom:5px; font-size:1.929em;}
-.orderandpay .main_wrapper .cont01 .swiper-slide.type01 .info .txt{position:absolute; top:89.8%; width:100%; text-align:center; font-size:1.666em; font-weight:bold; line-height: normal;}
+.orderandpay .main_wrapper .cont01 .swiper-slide.type01 .info .tit{position:absolute; top:6.12%; width:100%; margin-top:0; text-align:center; font-size:14px; font-weight:300;}
+.orderandpay .main_wrapper .cont01 .swiper-slide.type01 .info .tit strong{display:block; margin-bottom:5px; font-size:27px;}
+.orderandpay .main_wrapper .cont01 .swiper-slide.type01 .info .txt{position:absolute; top:89.8%; width:100%; text-align:center; font-size:20px; font-weight:bold; line-height: normal;}
 .orderandpay .main_wrapper .cont01 .pagination_wrap{bottom:6px; left:auto; right:0; width:67px; height:24px; background:#b1b1b1; border-radius:24px 0 0 24px; box-shadow:-1px 2px 4px rgba(0,0,0,0.2);}
 .orderandpay .main_wrapper .cont01 .pagination_wrap > a{display:inline-block; height:24px;}
 .orderandpay .main_wrapper .cont01 .pagination_wrap .swiper-pagination{position:static; padding-top:7px; padding-left:8px; -webkit-writing-mode:unset;}
@@ -730,17 +730,17 @@
 
 /*메인 아이콘 타이틀*/
 .orderandpay .main_cont_tit{margin-bottom:25px; padding:0 5px; text-align:center;}
-.orderandpay .main_cont_tit .tit{margin-bottom:20px; font-size:1.666em;}
+.orderandpay .main_cont_tit .tit{margin-bottom:20px; font-size:20px;}
 .orderandpay .main_cont_tit .tit:before{content:""; display:block; height:30px; margin-bottom:10px;}
 .orderandpay .main_cont_tit .tit.ico01:before{background:url('../../images/new/main_cont_tit01.png') center no-repeat; background-size:auto 30px;}
 .orderandpay .main_cont_tit .tit.ico02:before{background:url('../../images/new/main_cont_tit02.png') center no-repeat; background-size:auto 30px;}
 .orderandpay .main_cont_tit .tit.ico03:before{background:url('../../images/new/main_cont_tit03.png') center no-repeat; background-size:auto 30px;}
-.orderandpay .main_cont_tit .txt{font-size:1.083em;}
+.orderandpay .main_cont_tit .txt{font-size:13px;}
 .orderandpay .main_cont_tit .txt .txt_red{color:#FE6A5B;}
 
 .orderandpay .hott_ing_wrap{padding-top:50px;}
 .orderandpay .hott_ing_wrap .stuff_more_btn{width:80%; margin:0 auto;}
-.orderandpay .hott_ing_wrap .stuff_more_btn a{display:block; height:50px; line-height:48px; border:1px solid #000; font-size:1.166em; text-align:center;}
+.orderandpay .hott_ing_wrap .stuff_more_btn a{display:block; height:50px; line-height:48px; border:1px solid #000; font-size:14px; text-align:center;}
 .orderandpay .hott_ing_wrap .stuff_more_btn a:after{content:""; display:inline-block; width:5px; height:10px; margin-bottom:1px; margin-left:5px; background:url('../../images/new/stuff_more_btn.png') center no-repeat; background-size:5px 9px;}
 
 /*상품 상세*/
@@ -749,7 +749,7 @@
 .orderandpay .stuff_detail_wrap .stuff_thum a{display:block;}
 .orderandpay .stuff_detail_wrap .stuff_thum a img{width:100%;}
 .orderandpay .stuff_detail_wrap .stuff_cont{padding:0 20px;}
-.orderandpay .stuff_detail_wrap .stuff_cont .fund_alert{font-size:1.166em;}
+.orderandpay .stuff_detail_wrap .stuff_cont .fund_alert{font-size:14px;}
 .orderandpay .hott_ing_wrap .stuff_detail_wrap .stuff_cont .fund_alert{margin-bottom:25px;}
 .orderandpay .stuff_detail_wrap .stuff_cont .fund_alert:before{content:""; display:inline-block; width:19px; height:18px; margin-top: -5px; margin-right:2px; background:url('../../images/new/fund_alert_ico.png') center no-repeat; background-size:19px 18px; vertical-align:middle;}
 .orderandpay .stuff_detail_wrap .stuff_cont .fund_alert .unit_number{font-weight:bold; color:#D41417;}
@@ -757,14 +757,14 @@
 .orderandpay .hott_ing_wrap .stuff_detail_wrap .stuff_cont .stuff_tit_box{margin-bottom:60px;}
 .orderandpay .stuff_detail_wrap .stuff_cont .stuff_tit_box a{display:block;}
 .orderandpay .stuff_detail_wrap .stuff_cont .stuff_tit_box span{display:block;}
-.orderandpay .stuff_detail_wrap .stuff_cont .stuff_tit_box .tit{font-size:1.666em; font-weight:bold; white-space:nowrap; text-overflow:ellipsis; overflow:hidden; line-height:24px; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
+.orderandpay .stuff_detail_wrap .stuff_cont .stuff_tit_box .tit{font-size:20px; font-weight:bold; white-space:nowrap; text-overflow:ellipsis; overflow:hidden; line-height:24px; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
 .orderandpay .stuff_detail_wrap .stuff_cont .stuff_tit_box .tit + .txt{margin-top:10px;}
-.orderandpay .stuff_detail_wrap .stuff_cont .stuff_tit_box .txt{height:38px; font-size:1.166em; text-overflow:ellipsis; overflow:hidden; line-height:18px; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
+.orderandpay .stuff_detail_wrap .stuff_cont .stuff_tit_box .txt{height:38px; font-size:14px; text-overflow:ellipsis; overflow:hidden; line-height:18px; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
 .orderandpay .stuff_detail_wrap .stuff_cont .stuff_price_box{margin-bottom:35px;}
-.orderandpay .stuff_detail_wrap .stuff_cont .stuff_price_box .price{color:#DD1010; font-size:1.666em;}
+.orderandpay .stuff_detail_wrap .stuff_cont .stuff_price_box .price{color:#DD1010; font-size:20px;}
 .orderandpay .hott_ing_wrap .stuff_detail_wrap .stuff_cont .stuff_price_box{margin-bottom:30px;}
 .orderandpay .hott_ing_wrap .stuff_detail_wrap .stuff_cont .stuff_price_box .price{color:#000;}
-.orderandpay .stuff_detail_wrap .stuff_cont .stuff_price_box .price .font_t{font-size:1.25em;}
+.orderandpay .stuff_detail_wrap .stuff_cont .stuff_price_box .price .font_t{font-size:15px;}
 .orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box{margin-bottom:35px;}
 .orderandpay .hott_ing_wrap .stuff_detail_wrap .stuff_cont .funding_goal_box{margin-bottom:0;}
 .orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_progressbar{position:relative; height:4px; margin-bottom:30px; background:#e0e0e0;}
@@ -773,8 +773,8 @@
 .orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_goal_price_wrap dl:after{content:""; display:block; clear:both;}
 .orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_goal_price_wrap dl dt{float:left;}
 .orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_goal_price_wrap dl dd{float:right;}
-.orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_goal_price_wrap .funding_goal_price_type1{margin-bottom:5px; font-size:1.333em; font-weight:bold;}
-.orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_goal_price_wrap .funding_goal_price_type2{font-size:1.166em; font-weight:500;}
+.orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_goal_price_wrap .funding_goal_price_type1{margin-bottom:5px; font-size:16px; font-weight:bold;}
+.orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_goal_price_wrap .funding_goal_price_type2{font-size:14px; font-weight:500;}
 .orderandpay .stuff_detail_wrap .stuff_cont .funding_goal_box .funding_goal_price_wrap .funding_goal_price_type2 dd .unit_percent{color:#D41417;}
 
 .orderandpay .hott_delivery_wrap{padding-top:80px;}
@@ -784,7 +784,7 @@
 .orderandpay .hott_delivery_wrap .stuff_list_wrap .stuff_list li:nth-child(n + 3){margin-top:45px;}
 
 .orderandpay .stuff_item{display:block;}
-.orderandpay .stuff_item > span{width:100%; font-size:1.166em; font-weight:500; box-sizing:border-box;}
+.orderandpay .stuff_item > span{width:100%; font-size:14px; font-weight:500; box-sizing:border-box;}
 .orderandpay .stuff_item .img{position:relative; margin-bottom:15px;}
 .orderandpay .stuff_item .img img{width:100%;}
 .orderandpay .stuff_item .img .end_dim{position:absolute; width:100%; height:100%; top:0; left:0; color:#fff; text-align:center; background:rgba(0,0,0,0.6);}
@@ -794,7 +794,7 @@
 .orderandpay .stuff_item .txt{height:18px; padding:0 10px; margin-bottom:10px; white-space:nowrap; text-overflow:ellipsis; overflow:hidden; line-height:18px; display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;}
 .orderandpay .stuff_item .price{padding:0 10px; margin-bottom:15px;}
 .orderandpay .stuff_item .price .font_t{font-size:0.928em; font-weight:bold; vertical-align:bottom;}
-.orderandpay .stuff_item .encore_btn{display:block; height:35px; line-height:33px; border:1px solid #E0E0E0; font-size:1.166em; text-align:center; box-sizing:border-box;}
+.orderandpay .stuff_item .encore_btn{display:block; height:35px; line-height:33px; border:1px solid #E0E0E0; font-size:14px; text-align:center; box-sizing:border-box;}
 .orderandpay .stuff_item .encore_btn:after{content:""; display:inline-block; width:21px; height:23px; margin-left:5px; background:url('../../images/new/encore_btn_ico.png') center no-repeat; background-size:21px 23px; vertical-align:middle;}
 .orderandpay .stuff_item .encore_btn.complete{background:#FE6A5B; border:1px solid #FE6A5B; color:#fff;}
 
